[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levelinteface/Levelinterface.gd" type="Script" id=1]
[ext_resource path="res://assets/KiriFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Buttons.tres" type="DynamicFont" id=3]
[ext_resource path="res://quitbutton.gd" type="Script" id=4]
[ext_resource path="res://Levelinteface/waitingroom.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 4
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[node name="Levelinterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 19.0
margin_bottom = 1.0
color = Color( 0.380392, 0.12549, 0.0156863, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Select your level!"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer2/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 118.0
columns = 2

[node name="Level1btn" type="Button" parent="VBoxContainer2/VBoxContainer/GridContainer"]
margin_right = 510.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Level 1"
flat = true

[node name="Level2btn" type="Button" parent="VBoxContainer2/VBoxContainer/GridContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Level 2"
flat = true

[node name="Level3bt" type="Button" parent="VBoxContainer2/VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 510.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Level3"
flat = true

[node name="Level4bt" type="Button" parent="VBoxContainer2/VBoxContainer/GridContainer"]
margin_left = 514.0
margin_top = 61.0
margin_right = 1024.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Level4"
flat = true

[node name="quitbutton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 122.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"
flat = true
script = ExtResource( 4 )

[node name="WaitingRoom" parent="." instance=ExtResource( 5 )]

[node name="VBoxContainer" parent="WaitingRoom/CenterContainer" index="0"]
margin_top = 167.0
margin_bottom = 432.0

[node name="ItemList" parent="WaitingRoom/CenterContainer/VBoxContainer/CenterContainer" index="0"]
margin_top = 58.0
margin_bottom = 58.0
items = [ "Player 1", null, false, " Player 2", null, false, "Player 3", null, false ]

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/GridContainer/Level1btn" to="." method="_on_Level1btn_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/GridContainer/Level1btn" to="VBoxContainer2/VBoxContainer/GridContainer/Level1btn" method="_on_quitbutton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/GridContainer/Level2btn" to="." method="_on_Level2btn_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/GridContainer/Level2btn" to="VBoxContainer2/VBoxContainer/GridContainer/Level2btn" method="_on_Level2btn_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/GridContainer/Level2btn" to="VBoxContainer2/VBoxContainer/GridContainer/Level2btn" method="_on_quitbutton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/GridContainer/Level3bt" to="." method="_on_Level3bt_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/GridContainer/Level4bt" to="." method="_on_Level4bt_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/quitbutton" to="VBoxContainer2/VBoxContainer/quitbutton" method="_on_quitbutton_pressed"]
[connection signal="pressed" from="WaitingRoom/CenterContainer/VBoxContainer/RdyButton" to="." method="_on_RdyButton_pressed"]

[editable path="WaitingRoom"]
